--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
                      <div class="col-md-5 center-item">
                         <div class="input-group number-spinner">
-                           <button id="phone-minus-btn" value="Plus" class="btn btn-default"><i class="fas fa-minus"></i></button>
+                           <button id="phone-minus-btn" class="btn btn-default"><i class="fas fa-minus"></i></button>
                            <input id="phone-quentity" type="number" min="0" class="form-control text-center" value="1">
-                           <button id="phone-pluse-btn" value="minus" class="btn btn-default"><i class="fas fa-plus"></i></button>
+                           <button id="phone-pluse-btn" class="btn btn-default"><i class="fas fa-plus"></i></button>
                         </div>
                         <h5>$<span id="phone-price">1219</span></h5>
                         <img src="images/remove.png" alt="" class="remove-item">
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$1,278</h5>
-                        <h5>$0</h5>
-                        <h5>$1,278</h5>
+                        <h5>$<span id="sub-total">0,000</span></h5>
+                        <h5>$<span id="tax"></span>00</h5>
+                        <h5>$<span id="total"></span>0,000</h5>
                      </div>
                   </div>
                </div>
