--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                      </div>
 
                      <div class="col-md-4 status">
-                        <h5>$<span id="sub-total">0,000</span></h5>
-                        <h5>$<span id="tax"></span>00</h5>
-                        <h5>$<span id="total"></span>0,000</h5>
+                        <h5>$<span id="sub-total"></span></h5>
+                        <h5>$<span id="taxt"></span></h5>
+                        <h5>$<span id="total"></span></h5>
                      </div>
                   </div>
                </div>
@@ -79,7 +79,7 @@
          </div>
       </div>
    </section>
-   <script src="./index.js"></script>
+   <script src="./js/index.js"></script>
 </body>
 
 </html>
